# every-fail

./: .gitignore  CLAUDE.md  astro.config.mjs  astro.config.ts  biome.json  build.ts  correct.js  design.pen  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rough.md  spec.md  tsconfig.json  vite.config.ts  worker.ts  wrangler.jsonc  wrangler.toml
.claude/: settings.local.json
apps/cli/: loader.ts  package.json  tsconfig.json
apps/dot-sdk/: package.json
apps/server/: package.json  wrangler.toml
apps/site/: index.html  package.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/worker/: package.json  tsconfig.json  wrangler.toml
articles/01961a2c-0000-7000-8000-000000000001/: index.md  meta.toml
articles/019c3da6-f998-716a-8000-7bb4c85b59ad/: index.md  meta.toml
articles/019c5a72-3901-7482-ac6c-7377138abaa8/: index.md  meta.toml
core/src/: index.ts
crates/: Cargo.toml
crates/cli/: Cargo.toml  release.sh
crates/cli/src/: build.rs  main.rs  manifest.rs  markdown.rs  serve.rs  sitemap.rs  template.rs
crates/cli/src/commands/: config.rs  daily.rs  mod.rs
crates/design-tokens/: Cargo.toml
crates/worker/: Cargo.toml  wrangler.toml
dot/00001-vite-library-mode/: README.md
dot/00002-cloudflare-wrangler-cli/: README.md
dot/00004-hono-cli/: README.md
index/: index.html  style.css
not-found/: index.html  style.css
spec/: design.pen  rough.md  tags.toml
src/: content.config.ts  index.ts  main.ts
templates/: index.html  post.html  shell.html
web/: build.ts  dev.ts  package.json  pnpm-lock.yaml  tsconfig.json
(+195 files in other folders)
